--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <div class="one"></div>
   <div class="two"></div>
-  <a href="page2.html"><div class="three"></div></a>
+  <div class="three"></div>
   <div class="four"></div>
   <div class="five"></div>
-  <div class="six"></div>
+  <a href="page2.html"><div class="six"></div></a>
   <div class="seven"></div>
   <div class="eight"></div>
   <a href="page2.html"><div class="nine"></div></a>
