--- a/page3.html
+++ b/page3.html
@@ -18,6 +18,7 @@
     <video class="video1" controls autoplay loop muted>
             <source src="videos/art.mp4" type="video/mp4">
         </video>
+
     <video class="video2" controls autoplay loop muted>
           <source src="videos/pudding.mp4" type="video/mp4">
         </video>
@@ -25,6 +26,16 @@
         <source src="videos/bluebottle.mp4" type="video/mp4">
         </video>
       </div>
+
+      <img class="xiaoxin" src="images/xiaoxin.png">
+
+
+
+      <img class="comment" src="images/comment.png">
+      <img class="like" src="images/like.png">
+      <img class="repost" src="images/repost2.png">
+
+
       <img class="image34" src="images/48.jpg">
       <img class="image35" src="images/49.jpg">
       <img class="image36" src="images/50.jpg">
@@ -37,16 +48,33 @@
      <img class="image4" src="images/food3.jpg">
      <img class="image5" src="images/food2.jpg">
      <img class="image6" src="images/sun3.jpg">
+
+     <img class="comment" src="images/comment.png">
+     <img class="like" src="images/like.png">
+     <img class="repost" src="images/repost2.png">
+
+
+
+
      <img class="image7" src="images/20.jpeg">
      <img class="image8" src="images/21.jpeg">
      <a href="index.html"><img class="image9" src="images/22.jpeg"></a>
      <img class="image10" src="images/23.jpeg">
      <img class="image11" src="images/24.jpeg">
-     <img class="image12" src="images/25.jpeg">
+     
+     <img class="comment" src="images/comment.png">
+     <img class="like" src="images/like.png">
+     <img class="repost" src="images/repost2.png">
+
      <img class="image13" src="images/26.jpeg">
      <img class="image14" src="images/27.jpeg">
      <img class="image15" src="images/28.jpeg">
+
+     <img class="comment" src="images/comment.png">
+     <img class="like" src="images/like.png">
+     <img class="repost" src="images/repost2.png">
      <img class="image16" src="images/35.jpeg">
+
      <img class="image17" src="images/30.jpeg">
      <img class="image18" src="images/31.jpeg">
      <img class="image19" src="images/32.jpeg">
@@ -86,6 +114,15 @@
         <img class="image10" src="images/23.jpeg">
         <img class="image11" src="images/24.jpeg">
         <img class="image12" src="images/25.jpeg">
+
+
+        <img class="comment" src="images/comment.png">
+        <img class="like" src="images/like.png">
+        <img class="repost" src="images/repost.png">
+
+
+
+
         <img class="image13" src="images/26.jpeg">
         <img class="image14" src="images/27.jpeg">
         <img class="image15" src="images/28.jpeg">
@@ -111,6 +148,13 @@
     <img class="image11" src="images/24.jpeg">
     <img class="image12" src="images/25.jpeg">
     <img class="image13" src="images/26.jpeg">
+
+    <img class="comment" src="images/comment.png">
+    <img class="like" src="images/like.png">
+    <img class="repost" src="images/repost2.png">
+
+
+
     <img class="image14" src="images/27.jpeg">
     <img class="image15" src="images/28.jpeg">
     <img class="image16" src="images/35.jpeg">
@@ -130,10 +174,22 @@
             <img class="image27" src="images/41.jpeg">
             <img class="image28" src="images/42.jpg">
            <img class="image29" src="images/43.jpg">
+
+
+           <img class="comment" src="images/comment.png">
+           <img class="like" src="images/like.png">
+           <img class="repost" src="images/repost2.png">
+
+
             <img class="image30" src="images/44.jpg">
             <img class="image31" src="images/45.jpeg">
+            <img class="xiaoxin" src="images/xiaoxin.png">
             <img class="image32" src="images/46.jpg">
             <img class="image33" src="images/47.jpg">
+
+            <img class="xiaoxin" src="images/xiaoxin.png">
+            <img class="like" src="images/like.png">
+            <img class="repost" src="images/repost2.png">
 
 
 
@@ -144,8 +200,22 @@
     <img class="image22" src="images/36.jpeg">
    <img class="image23" src="images/37.jpeg">
     <img class="image24" src="images/38.jpeg">
+
+    <img class="comment" src="images/comment.png">
+    <img class="like" src="images/like.png">
+    <img class="repost" src="images/repost2.png">
+
+
     <img class="image25" src="images/39.jpeg">
     <img class="image26" src="images/40.jpeg">
+
+
+
+    <img class="comment" src="images/comment.png">
+    <img class="like" src="images/like.png">
+    <img class="repost" src="images/repost2.png">
+
+
     <img class="image27" src="images/41.jpeg">
     <img class="image28" src="images/42.jpg">
    <img class="image29" src="images/43.jpg">
