--- a/page3.html
+++ b/page3.html
@@ -27,6 +27,8 @@
         </video>
       </div>
 
+
+
       <img class="xiaoxin" src="images/xiaoxin.png">
 
 
@@ -34,6 +36,13 @@
       <img class="comment" src="images/comment.png">
       <img class="like" src="images/like.png">
       <img class="repost" src="images/repost2.png">
+
+
+
+      <video class="video18" controls autoplay loop muted>
+          <source src="videos/view.mp4" type="video/mp4">
+          </video>
+        </div>
 
 
       <img class="image34" src="images/48.jpg">
@@ -54,6 +63,10 @@
      <img class="repost" src="images/repost2.png">
 
 
+     <video class="video14" controls autoplay loop muted>
+             <source src="videos/bro3.mp4" type="video/mp4">
+             </video>
+
 
 
      <img class="image7" src="images/20.jpeg">
@@ -61,10 +74,13 @@
      <a href="index.html"><img class="image9" src="images/22.jpeg"></a>
      <img class="image10" src="images/23.jpeg">
      <img class="image11" src="images/24.jpeg">
-     
+
      <img class="comment" src="images/comment.png">
      <img class="like" src="images/like.png">
      <img class="repost" src="images/repost2.png">
+
+
+
 
      <img class="image13" src="images/26.jpeg">
      <img class="image14" src="images/27.jpeg">
@@ -181,6 +197,15 @@
            <img class="repost" src="images/repost2.png">
 
 
+
+           <video class="video16" controls autoplay loop muted>
+                   <source src="videos/ski.mp4" type="video/mp4">
+                   </video>
+                   <video class="video17" controls autoplay loop muted>
+                           <source src="videos/steak.mp4" type="video/mp4">
+                           </video>
+
+
             <img class="image30" src="images/44.jpg">
             <img class="image31" src="images/45.jpeg">
             <img class="xiaoxin" src="images/xiaoxin.png">
@@ -201,10 +226,15 @@
    <img class="image23" src="images/37.jpeg">
     <img class="image24" src="images/38.jpeg">
 
+
     <img class="comment" src="images/comment.png">
     <img class="like" src="images/like.png">
     <img class="repost" src="images/repost2.png">
 
+
+    <video class="video15" controls autoplay loop muted>
+                    <source src="videos/lvvibe.mp4" type="video/mp4">
+                    </video>
 
     <img class="image25" src="images/39.jpeg">
     <img class="image26" src="images/40.jpeg">
@@ -218,11 +248,28 @@
 
     <img class="image27" src="images/41.jpeg">
     <img class="image28" src="images/42.jpg">
+
+    <video class="video12" controls autoplay loop muted>
+            <source src="videos/bear.mp4" type="video/mp4">
+            </video>
+            <video class="video13" controls autoplay loop muted>
+                    <source src="videos/bro2.mp4" type="video/mp4">
+                    </video>
+
    <img class="image29" src="images/43.jpg">
     <img class="image30" src="images/44.jpg">
     <img class="image31" src="images/45.jpeg">
     <img class="image32" src="images/46.jpg">
     <img class="image33" src="images/47.jpg">
+
+
+    <video class="video10" controls autoplay loop muted>
+            <source src="videos/andy.mp4" type="video/mp4">
+
+      <video class="video11" controls autoplay loop muted>
+                      <source src="videos/baby.mp4" type="video/mp4">
+                      </video>
+            </video>
 
 
       </div>
