--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
           </div>
             <div class="col-sm-6">
               <div class="right-column text-center">
-                <img src="images/Instagram.png" class="Instagram">
+                <img src="images/instagram.png" class="Instagram">
                 <p class="info">Sign up to see photo and videos form your friends.</p>
                 <button type="submit" class="btn btn-primary btn-block"><img src="images/facebook.png"><a class="loginwithfacebook" href="page3.html">Log in with Facebook</a></button>
                 <p class="or">OR</p>
