--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="contanier">
 
   <div class="one"></div>
-  <div class="two"></div>
+  <a href="page2.html"><div class="two"></div></a>
   <div class="three"></div>
   <div class="four"></div>
   <div class="five"></div>
